# lightcurve-fitting

./: Cargo.toml  README.md  build.rs  parametric.diff
.github/workflows/: test.yml  throughput.yml
benchmarks/: nonparametric_points.csv  nonparametric_sources.csv  parametric_points.csv  parametric_sources.csv  plot_throughput.py
cuda/: gp.cu  gp2d.cu  models.cu  models_device.h  svi.cu
docs/: api.md  benchmarks.md  generate_plots.py
docs/models/: nonparametric.md  parametric.md
metal/: gp.metal  gp2d.metal  models.metal  models_device.h  svi.metal
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
scripts/: eval_features.py  run_ztf_extract.sh
src/: batch.rs  common.rs  features.rs  gp.rs  gp2d.rs  gpu.rs  gpu_cuda.rs  gpu_metal.rs  gpu_types.rs  lib.rs  nonparametric.rs  parametric.rs  sparse_gp.rs  thermal.rs
tests/: bench_gpu.rs  bench_throughput.rs  gen_test_fixtures.py  synthetic.rs  test_common.rs  test_gp.rs  test_gpu.rs  test_metal.rs  test_nonparametric.rs  test_parametric.rs  test_real_data.rs  test_thermal.rs  throughput.rs
tests/fixtures/: real_sources.json
