[workspace]
members = ["python"]

[package]
name = "lightcurve-fitting"
version = "0.1.0"
edition = "2021"
description = "Lightcurve fitting for astronomical transients"
license = "GPL-3.0"
repository = "https://github.com/boom-astro/lightcurve-fitting"
homepage = "https://github.com/boom-astro/lightcurve-fitting"

[features]
default = []
cuda = ["cc"]
metal = ["dep:objc2", "dep:objc2-metal", "dep:objc2-foundation"]
cli = ["ndarray", "ndarray-npy", "csv", "clap", "indicatif"]

[build-dependencies]
cc = { version = "1", features = ["parallel"], optional = true }

[dependencies]
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["vec"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.14.0"
rayon = "1.10"
ndarray = { version = "0.16.1", optional = true }
ndarray-npy = { version = "0.9", features = ["npz"], optional = true }
csv = { version = "1.3", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
indicatif = { version = "0.18", optional = true }
objc2 = { version = "0.6", optional = true }
objc2-metal = { version = "0.3", optional = true }
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSError"], optional = true }

[[bin]]
name = "extract-features"
path = "src/bin/extract_features.rs"
required-features = ["cuda", "cli"]
